sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:2: error: Missing closing brace `}' assumed here
def insertionSort() {
^AlgInsertionSort:2: error: expected class or object definition
def insertionSort() {
^AlgInsertionSort:8: error: Missing closing brace `}' assumed here
  while(plusPetit(v,i-diffcase)){
  ^