sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr = getNombreValeurs()
  var v = 0
  var diffcase = 1
  for (i <- 1 to lgr){
    copie(i,v)
  while(plusPetit(v,i-diffcase)){
    if (plusPetit(v,i-diffcase)){
      setValeur(i,getValeur(i-diffcase))
  }
    diffcase=diffcase+1
  }
  	